SigmaCodebackup3rdSep/objects/Business_Day__c.object
<CustomObject>
    <fields>
        <fullName>Business_Calendar__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business Calendar</label>
        <referenceTo>Business_Calendar__c</referenceTo>
        <relationshipLabel>Business Days</relationshipLabel>
        <relationshipName>Business_Days</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>End_Time__c</fullName>
        <label>End Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>Start_Time__c</fullName>
        <label>Start Time</label>
        <type>Time</type>
    </fields>
    <label>Business Day</label>
    <nameField>
        <label>Business Day Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Business Days</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Start_Time_greater_than_End_Time</fullName>
        <active>true</active>
        <description>Start time should be less end time</description>
        <errorConditionFormula>End_Time__c  &lt;=  Start_Time__c</errorConditionFormula>
        <errorMessage>Start time should be less than the end time.</errorMessage>
    </validationRules>
</CustomObject>